--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,102 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.popular-courses{
+    width: 100vw;
+    height: 420px;
+    padding-right: 10px;
+    padding-left: 10px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 1 370px;
+    flex-shrink:1;
+    /* border: 1px solid grey; */
+    gap: 30px;
+}
+
+.course-card{
+    width: 370px;
+    height:400px;
+    /* border: 1px solid black; */
+    border-radius: 5px;
+    padding: 5px;
+    box-shadow:0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+
+
+}
+.course-card:hover{
+   box-shadow:  0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+    transition: ease-out;
+}
+.course-card-img{
+    width: 100%;
+    height: 55%;
+    /* border: 1px solid black; */
+    border-radius: 5px;
+   
+}
+.course-card-img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.course-details{
+    height: 185px;
+    /* border: 1px solid black; */
+    padding-left: 10px;
+    padding-right: 10px;
+    word-wrap: normal;
+    
+}
+.course-title{
+    font-size: 15px;
+    font-family: "Roboto", serif;
+    font-weight:400;
+    color: rgb(29, 29, 29);
+}
+.course-description{
+    font-size: 17px;
+    line-height: 1.3;
+    font-family: "Roboto", serif;
+    font-weight: bold;
+}
+.course-price{
+    font-size: 20px;
+    font-family: "Poppins", serif;
+    font-weight: bold;
+    color: black;
+    margin-top: 30px;
+}
+.price-btn-wrap{
+    width: 100%;
+    height:40px;
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.price-btn-wrap button{
+    width: 120px;
+    height: 40px;
+    border-radius: 20px;
+    background-color:rgba(252, 226, 78, 0.952);
+    border: none;
+    color: black;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: "Poppins", serif;
+    
+}
+.category-btn-wrap{
+    width: 80%;
+    height: 70px;
+    border: 1px solid black;
+    display: flex;
+}
+.cate-btn
