--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,88 @@
 @tailwind components;
 @tailwind utilities;
 
+.nav__bar{
+    max-width: 100%;
+    height:90px;
+    /* border: 1px solid black; */
+    background-color: white;
+    padding-left: 80px;
+    padding-right: 80px;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);;
+    
+}
+.logo__img{
+    width: 30%;
+    height:100% ;
+    /* border: 1px solid black; */
+    background-color:white;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    padding-left: 10px;
+}
+.logo__img h2{
+    font-family: "Oleo Script", serif;
+    font-size: 25px;
+    color:rgb(12, 12, 115);
+}
 
+.nav_right{
+    width: 70%;
+    height: 100%;
+    /* border: 1px solid black; */
+    background-color:white;
+    display: flex;
+}
+.nav__link{
+    width: 70%;
+    height: 100%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    gap: 50px;
+   
+
+}
+.nav__link > a{
+    color: rgba(0, 0, 0, 0.902);
+    font-family:  sans-serif;
+    text-decoration: none;
+    font-size: 17px;
+    
+}
+.nav__btn{
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 10px;
+    /* border: 1px solid black; */
+}
+.signin{
+    text-decoration: none;
+    color: black;
+    font-size: 17px;
+    font-weight: bold;
+    font-family:  sans-serif;
+}
+.get_started_btn{
+   width: 150px;
+   height: 50px;
+   border: 1px solid rgb(18, 18, 18);
+   border-radius: 25px;
+   font-family: sans-serif;
+   font-size: 17px;
+   font-weight: 600;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+    flex-shrink: calc(100%-5px);
+    background-color: white;
+}
 .popular-courses{
     width: 100vw;
     height: 420px;
@@ -13,7 +94,7 @@
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    flex: 1 370px;
+    flex: 1 200px;
     flex-shrink:1;
     /* border: 1px solid grey; */
     gap: 30px;
@@ -95,11 +176,33 @@
     
 }
 .category-btn-wrap{
-    width: 80%;
+    width: 100%;
     height: 70px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
+    gap: 30px;
+    align-items: center;
+    justify-content: center; 
+    padding-left: 20px;
+    padding-right: 20px;
+    overflow-x: scroll;
+    white-space: nowrap;
+}
+.category-btn-wrap::-webkit-scrollbar{
+    display: none;
 }
 .cate-btn{
-    
+    border: none;
+    border-radius: 20px;
+    padding: 5px 9px;
+    background-color: white;
+    color: black;
+    font-size: 17px;
+    font-family: "Roboto", serif;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    transition: background-color 0.2s ease-in-out;
 }
