--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html{
+    font-size: 16px;
+}
+body{
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+.App{
+    width: 100%;
+    max-width: 100vw;
+    min-height: 100vh;
+    display: flex;
+
+    flex-direction: column;
+}
+#root{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
 .nav__bar{
     max-width: 100%;
     height:90px;
@@ -84,6 +114,261 @@
     flex-shrink: calc(100%-5px);
     background-color: white;
 }
+/* Hero Section Styling */
+.hero-container{
+    width: 100%;
+    height: 560px;
+    background-color: aliceblue;
+    /* border: 1px solid black; */
+    display: flex;
+    
+}
+.left-section{
+    width: 55%;
+    height: 100%;
+    /* border: 1px solid red; */
+    background-color: rgb(242, 242, 241);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.hero-text{
+    width: 80%;
+    height: 50%;
+    /* border: 1px solid black; */
+    margin-top: 100px;
+
+}
+.hero-text h1{
+    font-size: 55px;
+    font-family: sans-serif;
+}
+.hero-text p{
+    font-size: 14px;
+    font-family: sans-serif;
+    line-height: 2;
+    margin-top: 20px;
+    color: #333;
+}
+.hero-btns{
+    width: 80%;
+    height: 70px;
+    /* border: 1px solid black; */
+    margin-top: 30px;
+    display: inline-flex;
+    align-items: center;
+}
+.hero-btns button{
+    width: 150px;
+    height: 50px;
+    border: none;
+    background-color: black;
+    color: white;
+    font-family: sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+
+}
+.hero-btns a{
+    text-decoration: none;
+    font-size: 14px;
+    font-family: sans-serif;
+    margin-left: 5px;
+    color: black;
+    display: inline-flex;
+    align-items: center;
+    font-weight: bold;
+}
+.right-section{
+    width: 45%;
+    height: 100%;
+    /* border: 1px solid black; */
+    position: relative;
+    background-color: rgba(6, 6, 6, 0.472);
+    background-image: url("/images/two success.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-blend-mode: darken;
+   
+
+   
+}
+.hero-sm-div1{
+    width: 70px;
+    height: 70px;
+    background-color: rgb(249, 197, 253);
+    border-radius: 5px;
+    position: absolute;
+    bottom: 250px;
+    left: -50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+.hero-sm-div1 h4{
+    font-family: sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+    font-weight: bold;
+}
+.hero-sm-div1 p{
+    font-size: 9px;
+    font-family: sans-serif;
+    font-weight: 100;
+    line-height: 1.5;
+}
+.hero-sm-div2{
+    width: 95px;
+    height: 75px;
+    background-color: rgb(248, 228, 100);
+    border-radius: 10px;
+    position: absolute;
+    bottom: 150px;
+    left: -20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+
+}
+.hero-sm-div2 h4{
+    font-family: sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+    font-weight: bold;
+}
+.hero-sm-div2 p{
+    font-size: 9px;
+    font-family: sans-serif;
+    font-weight: 100;
+}
+
+/* Trusted Partner section */
+.trustedCon{
+    width: 85%;
+    height: 90px;
+    /* border: 1px solid black; */
+    margin-left: 100px;
+    position: relative;
+    margin-top: 70px;
+   
+}
+.sm-yellow{
+    width: 60px;
+    height: 5px;
+    background-color: rgb(248, 228, 100);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.trusted-content{
+    width: 100%;
+    height: 100%;
+    /* border: 1px sold red; */
+    display: flex;
+}
+.trusted-lft{
+    width: 30%;
+    height: 100%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.trusted-lft p{
+    font-size: 20px;
+    font-weight: bold;
+    font-family: sans-serif;
+    line-height: 1.8;
+}
+.trusted-rgt{
+    width: 70%;
+    height: 100%;
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+.logo-div{
+    width: 20%;
+    height: 70%;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+}
+.logo-div img{
+    width: 100%;
+    height: 100%;
+}
+
+/* featured section */
+.featuredWrap{
+    width: 85%;
+    height: 100px;
+    /* border: 1px solid black; */
+    margin-left: 100px;
+    margin-top: 90px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.featured-card{
+    width: 350px;
+    height: 100%;
+    border: 2px solid rgb(222, 222, 222);
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    gap: 10px;
+}
+.featured-card:hover{
+    box-shadow:  0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+    border: none;
+}
+.feat-lft{
+    border: 2px solid rgb(222, 222, 222);
+    width:70px ;
+    height:80px ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+.feat-rgt{
+    width: 80%;
+    height: 100%;
+    margin-top: 20px;
+
+}
+.feat-rgt h4{
+    font-size: 17px;
+    font-weight: bold;
+    font-family: "Poppins", sans-serif;
+    line-height: 1.5;
+}
+.feat-rgt p{
+    font-size: 12px;
+    font-family: "Poppins", sans-serif;
+    line-height: 1.5;
+}
+#feat1{
+    background-color:rgb(248, 228, 100) ;
+    border: 1px solid rgb(198, 173, 14);
+}
+#feat2{
+    background-color:rgb(249, 197, 253) ;
+    border: 1px solid rgb(178, 50, 187);
+}
+#feat3{
+    background-color:rgb(152, 241, 246) ;
+}
+
 .popular-courses{
     width: 100vw;
     height: 420px;
@@ -132,27 +417,30 @@
     /* border: 1px solid black; */
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 10px;
     word-wrap: normal;
     
 }
 .course-title{
     font-size: 15px;
-    font-family: "Roboto", serif;
+    font-family: "Roboto", sans-serif;
     font-weight:400;
+    line-height: 1.5;
     color: rgb(29, 29, 29);
 }
 .course-description{
     font-size: 17px;
     line-height: 1.3;
-    font-family: "Roboto", serif;
+    font-family: "Roboto", sans-serif;
     font-weight: bold;
+    margin-top: 10px;
 }
 .course-price{
     font-size: 20px;
-    font-family: "Poppins", serif;
+    font-family: "Poppins", sans-serif;
     font-weight: bold;
     color: black;
-    margin-top: 30px;
+    margin-top: 40px;
 }
 .price-btn-wrap{
     width: 100%;
@@ -161,6 +449,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .price-btn-wrap button{
@@ -172,8 +461,24 @@
     color: black;
     font-size: 14px;
     font-weight: bold;
-    font-family: "Poppins", serif;
+    font-family: "Poppins", sans-serif;
+    margin-top: 30px;
+
     
+}
+.popular-course-header{
+    width: 85%;
+    height: 100px;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 100px;
+    margin-top: 30px;
+}
+.popular-course-header h1{
+    font-family: "Poppins", sans-serif;
+    font-size: 30px;
 }
 .category-btn-wrap{
     width: 100%;
@@ -198,7 +503,8 @@
     background-color: white;
     color: black;
     font-size: 17px;
-    font-family: "Roboto", serif;
+    
+    font-family: "Roboto", sans-serif;
     cursor: pointer;
     display: flex;
     align-items: center;
